Fix style in gist

--- a/themes/hueman/source/css/style.styl
+++ b/themes/hueman/source/css/style.styl
@@ -106,6 +106,10 @@ code
     .main-body-content
         clearfix()
 
+// gist 스타일 수정
+.js-line-number
+    border-bottom: none !important;
+
 @import "_partial/header"
 @import "_partial/nav"
 @import "_partial/sidebar"
