--- a/themes/hueman/layout/common/head.ejs
+++ b/themes/hueman/layout/common/head.ejs
@@ -56,4 +56,6 @@
 
     <%- js('libs/jquery/2.0.3/jquery.min') %>
     <%- partial('plugin/scripts', { isHead: true }) %>
+
+    <%- partial('ads/adsense_page') %>
 </head>
